剔除弃用方法